adds array doc outline

--- a/docs/software/java/arrays.mdx
+++ b/docs/software/java/arrays.mdx
@@ -4,3 +4,9 @@ description: Overview of Arrays and ArrayLists.
 hide_table_of_contents: true
 sidebar_position: 7
 ---
+
+## Arrays and ArrayLists
+
+## Arrays
+
+## ArrayLists
