adds class doc outline

--- a/docs/software/java/classes-objs.mdx
+++ b/docs/software/java/classes-objs.mdx
@@ -4,3 +4,15 @@ description: Overview of Classes and Objects.
 hide_table_of_contents: true
 sidebar_position: 8
 ---
+
+# Classes and Objects
+
+## Classes
+
+## Objects
+
+## Access Modifiers
+
+## Importing Classes
+
+## Packages
