adds basic OOP overview

--- a/docs/software/java/classes-objs.mdx
+++ b/docs/software/java/classes-objs.mdx
@@ -6,12 +6,38 @@ sidebar_position: 8
 ---
 
 # Classes and Objects
+Object oriented programming (OOP) is a feature of some programming languages that organizes code around data and objects, instead of strictly logic. Using OOP, we can create blueprints for data with information about an type of object's properties, and we can re-use those blueprints to store characteristics for multiple objects. Overall, OOP is a way of organizing data and functions in a way that is easily reusable and maintainable. Lets compare classes and objects:
+<table>
+<tr>
+<td> </td>
+<td style={{textAlign: 'center', fontSize: 20}}> **Class** </td>
+<td style={{textAlign: 'center', fontSize: 20}}> **Object/Instance** </td>
+</tr>
+<tr>
+<td style={{textAlign: 'center', fontSize: 20}}> **Description** </td>
+<td> *Blueprint for every object of this class* </td>
+<td> *Represents one object* </td>
+</tr>
+<tr>
+<td style={{textAlign: 'center', fontSize: 20}}> **Variables** </td>
+<td> *Set of attributes that describe every object* </td>
+<td> *Set of actions that every object can perform* </td>
+</tr>
+<tr>
+<td style={{textAlign: 'center', fontSize: 20}}> **Methods** </td>
+<td> *Set of data* </td>
+<td> *Set of actions that it can perform* </td>
+</tr>
+</table>
 
 ## Classes
 
 ## Objects
 
 ## Access Modifiers
+- static
+- public
+- private
 
 ## Importing Classes
 
