--- a/docs/software/java/conditions.mdx
+++ b/docs/software/java/conditions.mdx
@@ -9,7 +9,7 @@ sidebar_position: 4
 Conditions are fundamental to programming. They allow us to preform certain actions based of the state of a program. A condition is defined as a comparison between two values using a comparison operator and enclosed in `()`.
 
 ## Comparison Operators
-These operators allow us to compare two values together. Similar to our arithmetic operators you need to think about what comparing two datatypes mean. You can't use create a condition that compares `"hello"` and `5` because is there is logical comparison between a `String` and an `int`. As stated above a condition in java is defined as comparison between two values using a comparison operator. The condition must be encompassed in `()`. The syntax for that would look like `([value] [comparison] [value])`.
+These operators allow us to compare two values together. Similar to our arithmetic operators you need to think about what comparing two datatypes mean. You can't create a condition that compares `"hello"` and `5` because there is not logical comparison between a `String` and an `int`. As stated above a condition in java is defined as comparison between two values using a comparison operator. The condition must be encompassed in `()`. The syntax for that would look like `([value] [comparison] [value])`.
 
 The are a few comparison operators each with their own behavior. Below is a table that shows the available comparison operators, a brief description of their function, and a code based example.
 <table>
