--- a/docs/software/tools/ad-scope.mdx
+++ b/docs/software/tools/ad-scope.mdx
@@ -39,7 +39,7 @@ You can load or save to these templates with `File` > `Import Layout...` and `Fi
 :::
 
 ## Custom Assets
-You can also setup custom assets to fully visualize our robot in AdScope. This is very helpful for simulation and math replay because it can give you an idea of what the robot was doing without have to look at a bunch of states. However it is not easy and it will take a little bit of time to setup. Its recommended to use our [2025 robot project](https://github.com/FRC-Team-4143/mainbot-2025/tree/develop/layouts/adscope-assets) as reference when setting it up. You can also reference the official AdScope doc for [Custom Assets](https://docs.advantagescope.org/more-features/custom-assets) and [3D Components](https://docs.advantagescope.org/tab-reference/3d-field#3d-components).
+You can also setup custom assets to fully visualize our robot in AdScope. This is very helpful for simulation and match replay because it can give you an idea of what the robot was doing without have to look at a bunch of states. However it is not easy and it will take a little bit of time to setup. Its recommended to use our [2025 robot project](https://github.com/FRC-Team-4143/mainbot-2025/tree/develop/layouts/adscope-assets) as reference when setting it up. You can also reference the official AdScope doc for [Custom Assets](https://docs.advantagescope.org/more-features/custom-assets) and [3D Components](https://docs.advantagescope.org/tab-reference/3d-field#3d-components).
 
 :::info[Looking for a fast solution?]
 If you just need the rough geometry for your robot I would recommend attempting to implement a [WPILib Mechanism](https://docs.advantagescope.org/tab-reference/3d-field#mechanisms--components). This is much simpler and faster approach.
