--- a/docs/software/java/vars-dt.mdx
+++ b/docs/software/java/vars-dt.mdx
@@ -9,7 +9,7 @@ sidebar_position: 2
 Variables are a core concept in any programming language. Think of them as a container to store a single piece of data. You need to define what type of data you will put into the container and give it a name. Variables should be named to easily identify what they contain.
 
 ## Declaring a Variable
-You can create a variable without assigning a value to it. You would do this is you plan on using it, but do not have a value to assign at creation. The syntax is `[type] [name]` which can be seen is examples below.
+You can create a variable without assigning a value to it. You would do this if you plan on using it, but do not have a value to assign at creation. The syntax is `[type] [name]` which can be seen is examples below.
 ```java
 int team_number;
 double pi;
