--- a/docs/software/java/loops.mdx
+++ b/docs/software/java/loops.mdx
@@ -77,6 +77,9 @@ for(int i = 0; i < 500; i++){
     // Run this code 500 times
 }
 ```
+:::info
+The iterator variable can be referenced within the loop to see what iteration you are currently on. This is useful for debugging or if you want to do something special on a specific iteration. The iterator variable can also be modified within the loop, but you must be carful not to accidentally make an infinite loop. (Generally you should rethink your plan if you need to update the iterator.)
+:::
 
 ## Break and Continue
 Inside of a loop you can use certain keywords to skip a single loop or even stop the looping altogether.
