--- a/docs/software/java/methods.mdx
+++ b/docs/software/java/methods.mdx
@@ -49,6 +49,7 @@ Your parameters only exist in a method's scope. That means outside of the `{}` o
 // Neither param_name or var_name can be referenced here
 void methodName(double param_name){
     double var_name;
+    // Both param_name and var_name can be referenced here
 }
 // Neither param_name or var_name can be referenced here
 ```
