--- a/docs/software/tools/vscode.mdx
+++ b/docs/software/tools/vscode.mdx
@@ -41,3 +41,6 @@ When building or deploying code make sure to watch the console for any errors th
 - GitLens Extension:
     - The GitLens extension is a great tool for visualizing the history of your code. It shows you who made changes to a file, when they were made, and what the changes were. You can install it from the Extensions Marketplace in VSCode.
     - Once installed, you can hover over a line of code to see who last modified it and when. This concept is called "blame" and can be very useful for understanding the history of your code.
+- Searching:
+    - You can search for instances of text in a file by pressing `Ctrl + F`. 
+    - You can also use `Ctrl + Shift + F` (or the magnifying glass on the left) to search across all files in the project. This is useful for finding where a variable or function is used throughout the codebase.
