formatting and content planning

--- a/docs/software/robot_dev/controllers.mdx
+++ b/docs/software/robot_dev/controllers.mdx
@@ -6,3 +6,11 @@ sidebar_position: 4
 ---
 
 # Controllers and Buttons
+
+## Setting up a Controller
+
+## Interfacing with an Axis
+
+## Interfacing with Button
+
+## Using the Controller POV Pad
