fixes spelling and grammar

--- a/docs/software/comms/ethernet.mdx
+++ b/docs/software/comms/ethernet.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ethernet
-description: Ethernet overview and what its used for.
+description: Ethernet overview and what it is used for.
 hide_table_of_contents: true
 sidebar_position: 4
 ---
