--- a/docs/software/comms/pwm.mdx
+++ b/docs/software/comms/pwm.mdx
@@ -1,6 +1,6 @@
 ---
 title: PWM
-description: Pulse Width Modulation overview and what its used for
+description: Pulse Width Modulation overview and what it is used for
 hide_table_of_contents: true
 sidebar_position: 2
 ---
