--- a/docs/software/comms/can.mdx
+++ b/docs/software/comms/can.mdx
@@ -1,6 +1,6 @@
 ---
 title: CAN
-description: Controller Area Network overview and what its used for.
+description: Controller Area Network overview and what it is used for.
 hide_table_of_contents: true
 sidebar_position: 1
 ---
