--- a/docs/software/java/quick-ref.mdx
+++ b/docs/software/java/quick-ref.mdx
@@ -1,5 +1,232 @@
 ---
 title: Quick Reference Guide
-hide_table_of_contents: true
+hide_table_of_contents: false
 sidebar_position: 0
 ---
+
+# Quick Reference Guide
+This is a quick reference guide for Java programming. It provides an overview of the key concepts throughout this section. It is not meant to be a comprehensive guide, but rather a quick reference for the most common concepts and syntax used in Java programming.
+
+## [**Variables & Data Types**](./vars-dt.mdx)
+- Variables are containers for data. Always assign a default value.
+- Use `snake_case` for names.
+- Common data types:
+    <table>
+    <tr>
+    {/* Column Titles */}
+    <td> **Datatype** </td>
+    <td> **Description** </td>
+    <td> **Example** </td>
+    </tr>
+    <tr>
+    {/* int */}
+    <td style={{textAlign: 'center', fontSize: 20}}> `int` </td>
+    <td> A non-decimal number </td>
+    <td>
+    ```java
+    int team_number = 4143;
+    ```
+    </td>
+    </tr>
+    <tr>
+    {/* double */}
+    <td style={{textAlign: 'center', fontSize: 20}}> `double` </td>
+    <td> A decimal number </td>
+    <td>
+    ```java
+    double pi = 3.1415
+    ```
+    </td>
+    </tr>
+    <tr>
+    {/* boolean */}
+    <td style={{textAlign: 'center', fontSize: 20}}> `boolean` </td>
+    <td> A value that is either true or false </td>
+    <td>
+    ```java
+    boolean robot_is_on = true;
+    ```
+    </td>
+    </tr>
+    <tr>
+    {/* String */}
+    <td style={{textAlign: 'center', fontSize: 20}}> `String` </td>
+    <td> A list of characters (a.k.a. text) *note the capitalization in `String` </td>
+    <td>
+    ```java
+    String message = "I am a string!";
+    ```
+    </td>
+    </tr>
+    </table>
+- Enums: Enums are a special type of class that represents a fixed set of constants. They are used to define a variable that can only take one of a predefined set of values.
+## [**Operators**](./operators.mdx)
+- Arithmetic:
+    <table>
+    <tr>
+    {/* Column Titles */}
+    <td> **Operator** </td>
+    <td> **Description** </td>
+    <td> **Compatible Datatypes** </td>
+    <td> **Example** </td>
+    </tr>
+    <tr>
+    {/* + operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> `+` </td>
+    <td> Addition </td>
+    <td > `int`, `double`, `String` </td>
+    <td>
+    ```java
+    1 + 1 = 2
+    1.5 + 1.0 = 2.5
+    "MARS" + "WARS" = "MARSWARS"
+    ```
+    </td>
+    </tr>
+    <tr>
+    {/* - operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> `-` </td>
+    <td> Subtraction </td>
+    <td> `int`, `double` </td>
+    <td>
+    ```java
+    2 - 1 = 0
+    2.5 - 0.5 = 2.0
+    ```
+    </td>
+    </tr>
+    {/* * operator */}
+    <tr>
+    <td style={{textAlign: 'center', fontSize: 25}}> `*` </td>
+    <td> Multiplication </td>
+    <td> `int`, `double` </td>
+    <td>
+    ```java
+    9 * 3 = 27
+    15 * 0.5 = 7.5
+    ```
+    </td>
+    </tr>
+    {/* / operator */}
+    <tr>
+    <td style={{textAlign: 'center', fontSize: 25}}> `/` </td>
+    <td> Division </td>
+    <td> `int`, `double` </td>
+    <td>
+    ```java
+    9 / 3 = 3
+    8.0 / 3.0 = 2.6666
+    ```
+    </td>
+    </tr>
+    {/* % operator */}
+    <tr>
+    <td style={{textAlign: 'center', fontSize: 25}}> `%` </td>
+    <td> Modulo </td>
+    <td> `int`, `double` </td>
+    <td>
+    ```java
+    10 % 3 = 1
+    8.5 % 3.0 = 2.5
+    ```
+    </td>
+    </tr>
+    </table>
+- Assignment:
+    <table>
+    <tr>
+    {/* Column Titles */}
+    <td> **Operator** </td>
+    <td> **Description** </td>
+    <td> **Example** </td>
+    <td> **Equivalent Expression** </td>
+    </tr>
+    <tr>
+    {/* = operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> `=` </td>
+    <td> Assignment </td>
+    <td>
+    ```java
+    int x = 0;
+    // Assigns a value (right side) to a variable (left side) </td>
+    ```
+    </td>
+    <td > `int x = 0;` </td>
+    </tr>
+    <tr>
+    {/* += operator */}
+    <td style={{textAlign: 'center', fontSize: 25}}> `+=` </td>
+    <td> Addition Assignment </td>
+    <td>
+    ```java
+    int x = 1;
+    x += 1; // x is now 2
+    ```
+    </td>
+    <td> `x = x + 1;` </td>
+    </tr>
+    {/* -= operator */}
+    <tr>
+    <td style={{textAlign: 'center', fontSize: 25}}> `-=` </td>
+    <td> Subtraction Assignment </td>
+    <td>
+    ```java
+    double x = 3.14;
+    x -= 0.14;  // x is now 3.0
+    ```
+    </td>
+    <td> `x = x - 0.14;` </td>
+    </tr>
+    {/* *= operator */}
+    <tr>
+    <td style={{textAlign: 'center', fontSize: 25}}> `*=` </td>
+    <td>Multiplication Assignment </td>
+    <td>
+    ```java
+    int x = 2;
+    x *= 6;  // x is now 12
+    ```
+    </td>
+    <td> `x = x * 6;` </td>
+    </tr>
+    {/* /= operator */}
+    <tr>
+    <td style={{textAlign: 'center', fontSize: 25}}> `/=` </td>
+    <td> Division Assignment </td>
+    <td>
+    ```java
+    int x = 9;
+    x /= 3;  // x is now 3
+    ```
+    </td>
+    <td> `x = x / 3;` </td>
+    </tr>
+    </table>
+- Date Truncation: Be careful when preforming math between and an `int` and a `double`. You can not store decimal precision data in an `int` datatype. Any decimal precision will be truncated.
+
+## [**Conditions**](./conditions.mdx)
+- Comparison:
+- Logical:
+- Use comparison operators inside `()` for if-statements.
+- Only compare compatible types.
+- Example: `if (x > 0) { ... }`
+## [**Loops**](./loops.mdx)
+- Use `for` and `while` loops to repeat code.
+- Avoid `while` loops in robot code to prevent infinite loops.
+- Use increment operators (`++`, `--`, `+=`, `-=`) for counters.
+## [**Arrays & ArrayLists**](./arrays.mdx)
+- Arrays store multiple values of the same type. Indexing starts at 0.
+- Use `.length` for array size and `ArrayList.size()` for ArrayLists.
+- Arrays are fixed size and ArrayLists are dynamic arrays.
+## [**Classes & Objects**](./classes-objs.mdx)
+- Java is class-based. Classes are blueprints; objects are instances.
+- Use `PascalCase` for class names.
+- Use constructors to initialize objects.
+- Access fields and methods with dot notation.
+- Prefer getter/setter methods for encapsulation.
+## [**Methods**](./methods.mdx)
+- Methods are reusable blocks of code.
+- Use `camelCase` for method names.
+- Methods can have parameters and return values.
+- Scope matters—variables inside methods are not accessible outside.
+
