fixes boolean logic examples

--- a/docs/software/java/conditions.mdx
+++ b/docs/software/java/conditions.mdx
@@ -118,7 +118,7 @@ Because our conditions return a `boolean` *(true/false)*, these same logical ope
     <td style={{textAlign: 'center', fontSize: 25}}> `&&` </td>
     <td>
     ```java
-    (false && false) // true
+    (false && false) // false
     (false && true) // false
     (true && false) // false
     (true && true) // true
@@ -134,7 +134,7 @@ Because our conditions return a `boolean` *(true/false)*, these same logical ope
     <td style={{textAlign: 'center', fontSize: 25}}> `||` </td>
     <td>
     ```java
-    (false || false) // true
+    (false || false) // false
     (false || true) // true
     (true || false) // true
     (true || true) // true
