adds links to software overviews

--- a/docs/software/overview.mdx
+++ b/docs/software/overview.mdx
@@ -6,14 +6,14 @@ sidebar_position: 0
 
 # Software Docs
 
-## Software Tools
+## [Software Tools](/docs/category/software-tools)
 
-## Java Basic
+## [Java Basics](/docs/category/java-basics)
 
-## Robot Development
+## [Robot Development](/docs/category/robot-development)
 
-## Control Concepts
+## [Control Concepts](/docs/category/control-concepts)
 
-## Robot Communications
+## [Robot Communications](/docs/category/robot-communications)
 
-## Lessons Learned
+## [Lessons Learned](/docs/software/lessons.mdx)
