--- a/docs/scouting/real-life-data.mdx
+++ b/docs/scouting/real-life-data.mdx
@@ -6,3 +6,5 @@ sidebar_position: 2
 ---
 
 # Real Life Data
+Real Life Data is a full stack scouting solution made with the help of Team 2468 Team Appreciate.
+ 
