--- a/docs/software/java/standards.mdx
+++ b/docs/software/java/standards.mdx
@@ -22,6 +22,9 @@ sidebar_position: 10
         return speed * time;
     }
     ```
+:::info JavaDoc Comments
+Typing out "/**" and hitting enter above a method will automatically generate a JavaDoc comment template with that methods parameters and return values.
+:::
 
 ## Variables
 - All variables should be named using `snake_case`. Examples are shown below:
